Resolve checkbox width issue; resolve mobile nav body overflow issue; add active class to main nav links

--- a/src/scss/base/_elements.scss
+++ b/src/scss/base/_elements.scss
@@ -106,5 +106,5 @@ fieldset input {
 }
 
 input[type="checkbox"] {
-  @apply w-4 h-4;
+  @apply w-4 h-4 min-w-4 min-h-4;
 }
